--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Site</title>
+    <title>VNL Events</title>
+    <link rel="stylesheet" type="text/css" href="vnlstyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,700&family=Roboto+Condensed&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-    <h1>Hello World</h1>
+    <header id="topheader">
+        <a href="#" id="title-villagenlife" class="title">VILLAGE N LIFE</a>
+        <nav id="navigator">
+            <a href="#" id="title-events" class="title">EVENTS</a>
+            <ul id="menu">
+                <li class="listlink"><a href="#" class="navbarlink">Home</a></li>
+                <li class="listlink"><a href="#" class="navbarlink">Events</a></li>
+                <li class="listlink"><a href="#" class="navbarlink">Special Offers</a></li>
+                <li class="listlink"><a href="#" class="navbarlink">Gallery</a></li>
+                <li class="listlink"><a href="#" class="navbarlink">Contant Us</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
