--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VNL Events</title>
-    <link rel="stylesheet" type="text/css" href="vnlstyle.css">
+    <link rel="stylesheet" type="text/css" href="https://somelelequse.github.io/first_site/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -13,6 +13,64 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,700&family=Roboto+Condensed&display=swap"
         rel="stylesheet">
 
+    <style>
+    body {
+        margin: 0;
+    }
+
+    #topheader {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    #navigator {
+        display: flex;
+        flex: 0.95;
+        background-color: black;
+        width: 100%;
+        padding: .7rem;
+        justify-content: space-between;
+        border-radius: 2rem 0 0 2rem;
+    }
+
+    #menu {
+        margin: 0;
+        display: flex;
+        width: 50%;
+        justify-content: space-evenly;
+    }
+
+    .title {
+        text-decoration: none;
+        font-family: 'Nunito Sans', sans-serif;
+        font-size: 2.5rem;
+        font-weight: bold;
+    }
+
+    #title-villagenlife {
+        color: black;
+        padding: 1rem 0 0 5rem;
+        padding-right: 0;
+        margin-right: 0;
+    }
+
+    #title-events {
+        color: white;
+        margin-left: 1rem;
+    }
+
+    .listlink {
+        list-style-type: none;
+        display: inline;
+    }
+
+    .navbarlink {
+
+        color: white;
+        text-decoration: none;
+    }
+    </style>
 </head>
 
 <body>
