--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VNL Events</title>
-    <!-- <link rel="stylesheet" type="text/css" href="https://somelelequse.github.io/first_site/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="https://somelelequse.github.io/first_site/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
